--- a/proxies/2/index.html
+++ b/proxies/2/index.html
@@ -97,7 +97,7 @@
             100% { transform: translate(var(--end-x), var(--end-y)); opacity: 0; }
         }
     </style>
-    <script async src="https://www.testdomainname.xyz/widget/widget.js" data-id="r4-widget-connection"></script>
+    <script async src="https://www.croxyproxy.com/widget/widget.js" data-id="r4-widget-connection"></script>
 </head>
 <body>
     <h1>Ashen Proxy 2</h1>
